# my-ccds-template

./: README.md  ccds.json  dev-requirements.txt
ccds/hook_utils/: dependencies.py
hooks/: post_gen_project.py
{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  .pre-commit-config.yml  README.md  pyproject.toml  targets.py  tasks.py
